--- a/templates/index.html
+++ b/templates/index.html
@@ -12,11 +12,11 @@
     <script type="application/javascript">
         // 2017 totals for entire US --> set these variables equal to appropriate value
         var year = 2017;
-        var coal_count;
-        var natural_gas_count;
-        var nuclear_count;
-        var petroleum_count;
-        var renewable_count;
+        var coal_count = !coal! ;
+        var natural_gas_count = !natural_gas! ;
+        var nuclear_count = !nuclear! ;
+        var petroleum_count = !petroleum! ;
+        var renewable_count = !renewable! ;
     </script>
 </head>
 <body onload="Init()">
@@ -68,7 +68,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <!-- Data to be inserted here -->
+                    !tbody!
                 </tbody>
             </table>
             </div>
