--- a/templates/year.html
+++ b/templates/year.html
@@ -11,12 +11,12 @@
     <script type="application/javascript" src="/scripts/yearvis.js"></script>
     <script type="application/javascript">
         // `year` and total counts for entire US --> set these variables equal to appropriate value
-        var year;
-        var coal_count;
-        var natural_gas_count;
-        var nuclear_count;
-        var petroleum_count;
-        var renewable_count;
+        var year = !year!;
+        var coal_count = !coal!;
+        var natural_gas_count = !natural_gas!;
+        var nuclear_count = !nuclear!;
+        var petroleum_count = !petroleum!;
+        var renewable_count = !renewable!;
     </script>
 </head>
 <body onload="Init()">
@@ -73,7 +73,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <!-- Data to be inserted here -->
+                    !tbody!
                 </tbody>
             </table>
             </div>
