--- a/templates/state.html
+++ b/templates/state.html
@@ -45,11 +45,11 @@
 
             <div>
                 <div class="left">
-                    <h2>Yearly Snapshot</h2> <!-- change header to include state (e.g. Minnesota Yearly Snaphot) -->
+                    <h2>!state_name! Yearly Snapshot</h2> <!-- change header to include state (e.g. Minnesota Yearly Snaphot) -->
                 </div>
                 <div class="right">
-                    <a class="prev_next" href="">XX</a> <!-- change XX to prev state, link to WY if state is AK -->
-                    <a class="prev_next" href="">XX</a> <!-- change XX to next state, link to AK if state is WY -->
+                    <a class="prev_next" href="">!prev_state_link!</a> <!-- change XX to prev state, link to WY if state is AK -->
+                    <a class="prev_next" href="">!next_state_link!</a> <!-- change XX to next state, link to AK if state is WY -->
                 </div>
                 <div class="spacer1"></div>
                 <div class="left">
