Added proper links on state page. Changed names of state image files

--- a/templates/state.html
+++ b/templates/state.html
@@ -53,7 +53,7 @@
                 </div>
                 <div class="spacer1"></div>
                 <div class="left">
-                    <img src="/images/!state!.png" alt="!state!" width="250" height="auto" /> <!-- change src and alt for state image -->
+                    <img src="/images/!state_abbreviation!.png" alt="!state!" width="250" height="auto" /> <!-- change src and alt for state image -->
                 </div>
                 <div class="right">
                     <div id="snapshot"></div>
