--- a/templates/energy.html
+++ b/templates/energy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <title>US Energy Consumption</title> <!-- change title to include year (e.g. 1999 US Energy Consumption) -->
+    <title>US !type_nice! Consumption</title> <!-- change title to include year (e.g. 1999 US Energy Consumption) -->
     <link rel="stylesheet" href="/css/style.css">
     <script src="https://cdn.anychart.com/releases/8.7.0/js/anychart-core.min.js"></script>
     <script src="https://cdn.anychart.com/releases/8.7.0/js/anychart-cartesian.min.js"></script>
@@ -11,14 +11,14 @@
     <script type="application/javascript" src="/scripts/energyvis.js"></script>
     <script type="application/javascript">
         // `energy_type` and object of consumption per year per state --> set these variables equal to appropriate value
-        var energy_type = " !type! ";
+        var energy_type = "!type_nice!";
         var energy_counts = !counts!;  // e.g. {AK: [...], AL: [...], AR: [...], ...}
     </script>
 </head>
 <body onload="Init()">
     <div id="wrapper">
         <div id="content">
-            <a href="/"><h1>US Energy Consumption</h1></a>
+            <a href="/"><h1>US !type_nice! Consumption</h1></a>
             
             <div class="spacer2"></div>
             
@@ -41,15 +41,15 @@
 
             <div>
                 <div class="left">
-                    <h2>Consumption Snapshot</h2> <!-- change header to include energy type (e.g. Coal Consumption Snaphot) -->
+                    <h2>!type_nice! Consumption Snapshot</h2> <!-- change header to include energy type (e.g. Coal Consumption Snaphot) -->
                 </div>
                 <div class="right">
-                    <a class="prev_next" href="">XX</a> <!-- change XX to prev enery type, link to Renewable if energy is Coal -->
-                    <a class="prev_next" href="">XX</a> <!-- change XX to next enery type, link to Coal if energy is Renewable -->
+                    <a class="prev_next" href="/energy-type/!prevenergy!">!prevenergy_nice!</a> <!-- change XX to prev enery type, link to Renewable if energy is Coal -->
+                    <a class="prev_next" href="/energy-type/!nextenergy!">!nextenergy_nice!</a> <!-- change XX to next enery type, link to Coal if energy is Renewable -->
                 </div>
                 <div class="spacer1"></div>
                 <div class="left">
-                    <img src="/images/noimage.jpg" alt="No Image" width="250" height="auto" /> <!-- change src and alt for energy type image -->
+                    <img src="/images/ !type! .jpg" alt="!type!" width="250" height="auto" /> <!-- change src and alt for energy type image -->
                 </div>
                 <div class="right">
                     <div id="snapshot"></div>
@@ -58,7 +58,7 @@
 
             <div class="spacer2"></div>
 
-            <h2>Consumption by Year</h2>
+            <h2>!type_nice! Consumption by Year</h2>
             <div class="spacer1"></div>
             <div class="scroll_table">
             <table>
