--- a/templates/year.html
+++ b/templates/year.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <title>US Energy Consumption</title> <!-- change title to include year (e.g. 1999 US Energy Consumption) -->
+    <title>!year! US Energy Consumption</title> <!-- change title to include year (e.g. 1999 US Energy Consumption) -->
     <link rel="stylesheet" href="/css/style.css">
     <script src="https://cdn.anychart.com/releases/8.7.0/js/anychart-core.min.js"></script>
     <script src="https://cdn.anychart.com/releases/8.7.0/js/anychart-pie.min.js"></script>
@@ -22,7 +22,7 @@
 <body onload="Init()">
     <div id="wrapper">
         <div id="content">
-            <a href="/"><h1>US Energy Consumption</h1></a>
+            <a href="/"><h1>!year! US Energy Consumption</h1></a>
             
             <div class="spacer2"></div>
             
@@ -45,7 +45,7 @@
 
             <div>
                 <div class="left">
-                    <h2>National Snapshot</h2> <!-- change header to include year (e.g. 1999 National Snaphot) -->
+                    <h2>!year! National Snapshot</h2> <!-- change header to include year (e.g. 1999 National Snaphot) -->
                 </div>
                 <div class="right">
                     <a class="prev_next" href="!prev_year_link!">Prev</a> <!-- link to itself if year is 1960 -->
@@ -57,7 +57,7 @@
 
             <div class="spacer2"></div>
 
-            <h2>Consumption by State</h2>
+            <h2>!year! Consumption by State</h2>
             <div class="spacer1"></div>
             <div class="scroll_table">
             <table>
